--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iot-dev",
+  "name": "spark-dev",
   "main": "./lib/spark-dev",
   "version": "0.0.1",
   "description": "Professional, hackable IDE for IoT, based on Github's Atom & Particle IDE",
@@ -26,7 +26,7 @@
   "packageDependencies": {
     "tool-bar": "0.1.7"
   },
-  
+
   "consumedServices": {
     "status-bar": {
       "versions": {
