use esptoopy-js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "underscore.string": "*",
     "validator": "*",
     "when": "*",
+    "esptoolpy-js": "*  ",
     "xtend": "*"
   },
   "packageDependencies": {
